# ModernCppStarter

./: CMakeLists.txt  README.md  README_CN.md
standalone/: CMakeLists.txt
test/: CMakeLists.txt
